--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <!--NAVBAR-->
     <nav>
         <div class="logo">
-            <a href="acceuil.html"><img src="Tech-Out_Logo.png" alt="Logo Tech-Out" class="Logo"></a>
+            <a href="index.html"><img src="Tech-Out_Logo.png" alt="Logo Tech-Out" class="Logo"></a>
         </div>
         <div class="liens">
             <ul>
