--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         <p class="contenu">Vous accompagner dans le choix des différents équipements numériques pour votre entreprise.</p>
     </div>    
     <!--Mission-->
+    <a href="https://www.localhost.com/">Votre Compte</a>
     <!--slider-->
+
 <!--Slider Image-->
 <div class="slidershow middle">
 
