--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="partenaires.html">Nos Partenaires</a></li>
                 <li><a href="prestations.html">À Propos</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href="http://localhost/">Votre Compte</a></div></li>
             </ul>
         </div>
     </nav>
@@ -28,9 +29,7 @@
         <p class="contenu">Vous accompagner dans le choix des différents équipements numériques pour votre entreprise.</p>
     </div>    
     <!--Mission-->
-    <a href="https://www.localhost.com/">Votre Compte</a>
     <!--slider-->
-
 <!--Slider Image-->
 <div class="slidershow middle">
 
